k8s/frog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frog
  name: frog
  namespace: newsgac
spec:
  ports:
  - name: "12345"
    port: 12345
    targetPort: 12345
  selector:
    io.kompose.service: frog
