k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: newsgac
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  - name: "6380"
    port: 6380
    targetPort: 6380
  selector:
    io.kompose.service: redis
