k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
  namespace: newsgac
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 5050
  selector:
    io.kompose.service: web
