k8s/web-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: newsgac
  namespace: newsgac
spec:
  rules:
    - host: newsgac.clariah.nl
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 5050
# TLS is handled by outside proxy
